second html upload

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <! -- photo -->
     <img src="images/trumpinnyc.jpg" alt="Paris" class="center">
-    <h6> Former President Donald J. Trump in Harlem in April Credit: Anna Watts for The New York Times </h6>
+    <h6> Former President Donald J. Trump in Harlem in April. Credit: Anna Watts for The New York Times </h6>
     <! -- headline -->
     <h1> Congressional Republicans Gain Alongside Trump in 2024 </h1>
 
